# ffpp

./: .gitignore  CMakeLists.txt  README.md  api.cpp  ffpp.cpp  ffpp.hpp
resources/: build-win.md
